<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imgpsh_fullsize_anim"
    tools:context=".LoginActivity">

    <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/webview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />


    <androidx.cardview.widget.CardView
        android:id="@+id/data"
        android:layout_width="283dp"
        android:layout_height="327dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="181dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="215dp"
        android:focusableInTouchMode="false"
        android:orientation="vertical"
        card_view:cardCornerRadius="9dp"
        card_view:cardElevation="8dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <com.hoodable.FontEditTextView
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:autofillHints="" tools:targetApi="o"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@color/grey_21" />

            <com.hoodable.FontEditTextView
                android:id="@+id/edt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:autofillHints="" tools:targetApi="o" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/grey_21" />

            <com.hoodable.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/forget_password"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:layout_marginEnd="10dp" />

            <com.hoodable.FontButtonView
                android:id="@+id/but_login"

                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"
                android:text="@string/login"
                android:textColor="@color/white" />

            <com.hoodable.FontButtonView
                android:id="@+id/but_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:text="@string/sign_up"

                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:layout_marginEnd="10dp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>